--- a/TensorRT.vcxproj.filters
+++ b/TensorRT.vcxproj.filters
@@ -106,6 +106,9 @@
     <ClCompile Include="src\caffeplugin\caffeplugin.cpp">
       <Filter>src\caffeplugin</Filter>
     </ClCompile>
+    <ClCompile Include="batch_infer.cpp">
+      <Filter>src\examples</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\common\cc_util.hpp">
